Fixed footer overlapping main content

--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -94,6 +94,7 @@ body {
 }
 .footer {
     position: absolute;
+    left: 0;
     bottom: 0;
     width: 100%;
     line-height: 60px; /* Vertically center the text there */
